Assignment 4 website complete successfully

--- a/about.html
+++ b/about.html
@@ -87,10 +87,13 @@
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/Banner1.jpg" alt="Banner 1" width="1100" height="500">
+      <img src="images/gallery/pic2.jfif" alt="Banner 1" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="images/Banner2.jpeg" alt="Banner 2" width="1100" height="500">
+      <img src="images/gallery/pic1.jfif" alt="Banner 2" width="1100" height="500">
+    </div>
+    <div class="carousel-item">
+      <img src="images/gallery/ic3.jfif" alt="Banner 2" width="1100" height="500">
     </div>
   </div>
   
