--- a/resutrants.html
+++ b/resutrants.html
@@ -133,7 +133,7 @@ Our Kanwal Restaurant is offering a choices of cuisine, hot and cold beverages a
               text-align: left;
               margin-left: 0;   "  />
              <br>
-<a href="#"><img src="images/Resturantsimage1.jpg" alt="" width="280" height="200" ></a><br><br>
+<a href="#"><img src="images/Resturantsimage1.jpg" alt="" width="100%" height="100%" ></a><br><br>
   BBQ DINNER
     <hr
       style="
@@ -143,7 +143,7 @@ Our Kanwal Restaurant is offering a choices of cuisine, hot and cold beverages a
               margin-left: 0;   "  />
               <br>
                  <br>
-        <a href="#"> <img src="images/BBQimage.jpg" alt="" width="280" height="200" ></a><br><br>
+        <a href="#"> <img src="images/BBQimage.jpg" alt="" width="100%" height="100%" ></a><br><br>
                       CAKE SHOP
                       <hr
                 style="
@@ -152,7 +152,7 @@ Our Kanwal Restaurant is offering a choices of cuisine, hot and cold beverages a
                   text-align: left;
                   margin-left: 0;   "  />
                   <br><br>
-          <a href="#"> <img src="images/Cakeimage.jpg" alt=""  width="280" height="200"></a>
+          <a href="#"> <img src="images/Cakeimage.jpg" alt=""  width="100%" height="100%"></a>
                  </div>
                    </div>
                       </div>
