--- a/resutrants.html
+++ b/resutrants.html
@@ -76,10 +76,10 @@ Our Kanwal Restaurant is offering a choices of cuisine, hot and cold beverages a
   <!-- The slideshow -->
     <div class="carousel-inner">
        <div class="carousel-item active">
-          <img src="images/Resturantsslider11.jpg" alt="Banner 1" width="100%" height="100%">
+          <img src="images/Resturantsslider11.jpg" alt="Banner 1" width="100" height="200">
             </div>
                <div class="carousel-item">
-                  <img src="images/Resturantsslider12.jpg" alt="Banner 2" width="100%" height="100%">
+                  <img src="images/Resturantsslider12.jpg" alt="Banner 2" width="100" height="200">
                      </div>
                         </div>
                           </div>
@@ -93,10 +93,10 @@ Our Kanwal Restaurant is offering a choices of cuisine, hot and cold beverages a
                  <!-- The slideshow -->
                <div class="carousel-inner">
             <div class="carousel-item active">
-         <img src="images/Resturantsslider22.jpg" alt="Banner 1" width="100%" height="100%">
+         <img src="images/Resturantsslider22.jpg" alt="Banner 1" width="100" height="200">
       </div>
     <div class="carousel-item">
- <img src="images/Resturantsslider23.jpg" alt="Banner 2" width="100%" height="100%">
+ <img src="images/Resturantsslider23.jpg" alt="Banner 2" width="100" height="200">
 </div>
   </div>
     </div>
@@ -110,10 +110,10 @@ Our Kanwal Restaurant is offering a choices of cuisine, hot and cold beverages a
                        <!-- The slideshow -->
                           <div class="carousel-inner">
                              <div class="carousel-item active">
-                                <img src="images/Resturantsslider33.jpg" alt="Banner 1" width="100%" height="100%">
+                                <img src="images/Resturantsslider33.jpg" alt="Banner 1" width="100" height="200">
                                    </div>
                                       <div class="carousel-item">
-                                         <img src="images/Resturantsslider34.jpg" alt="Banner 2" width="100%" height="100%">
+                                         <img src="images/Resturantsslider34.jpg" alt="Banner 2" width="100" height="200">
                                       </div>
                                    </div>
                                </div>
